# libral-core

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .replit  .replitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md  replit.toml  tailwind.config.ts  vitest.config.ts
LiburaL-BaseCore/: main.py  pcgp_grooming_script.py  pcgp_manager.py  pyproject.toml
LiburaL-BaseCore/archive/: README.md
LiburaL-BaseCore/archive/misc/: 20251005_134421_structure.txt
LiburaL-BaseCore/archive/old-configs/: Dockerfile.nodejs  docker-compose.nodejs.yml
LiburaL-BaseCore/archive/old-configs/config/: routing.yaml
LiburaL-BaseCore/archive/reports/: WEEK_6_PAYMENTS_COMPLETION_REPORT.md  WEEK_7_API_HUB_COMPLETION_REPORT.md
LiburaL-BaseCore/attached_assets/: Pasted--project-id-Libral-Core-OPS-Blueprint-V1-focus-area-Operational-Design-and-Automati-1759550004566_1759550004573.txt  Pasted--project-name-Libral-Project-Final-philosophy-PRIVACY-FIRST-ZERO-WASTE-WORLD-CL-1759529234068_1759529234070.txt
LiburaL-BaseCore/docs/: GITHUB_SETUP.md  README.md  SECURITY.md  replit.md
LiburaL-BaseCore/pcgp_tools/: __init__.py  archiver.py  repairer.py  validator.py
LiburaL-BaseCore/policies/active/: recovery_runbook_crad.json  security_policy_amm.json
LiburaL-BaseCore/src/client/src/: App.tsx  index.css  main.tsx
LiburaL-BaseCore/src/modules/libral_core/: Dockerfile  README_PRODUCTION.md  pyproject.toml  run_production.sh  verify_production.py
LiburaL-BaseCore/src/server/: routes.ts
LiburaL-BaseCore/src/server/adapters/: email.ts  telegram.ts
LiburaL-BaseCore/src/server/modules/: aegis-pgp.ts  stamp-creator.ts
LiburaL-BaseCore/src/server/services/: events.ts  telegram.ts
libral-core/: .env.example  DEPLOYMENT.md  PRODUCTION_STATUS.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_production.sh  verify_production.py
libral-core/docs/: AI_MODULE.md  MASTER_REFERENCE.md  MODULE_REGISTRY.md  modules.yaml
libral-core/infra/scripts/: archive_script.sh
libral-core/libral_core/: __init__.py  config.py
libral-core/libral_core/ops/: router.py
libral-core/models/: README.md
libral-core/policies/: recovery_runbook_crad.json  security_policy_amm.json
libral-core/src/: main.py
libral-core/src/governance/: __init__.py  autonomous_moderator.py  context_aware_debugger.py
libral-core/src/modules/: integration_api.py
libral-core/tests/: __init__.py  test_ai_module.py  test_app_module.py  test_auth_module.py  test_marketplace_module.py  test_ops_module.py  test_tagger.py
(+282 files in other folders)
