[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "iso8601>=2.1.0",
    "pillow>=11.3.0",
    "prometheus-client>=0.23.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "requests>=2.32.5",
]
