[tool.poetry]
name = "libral-core"
version = "2.0.0"
description = "G-ACE.inc TGAXIS Libral Platform V2 - Revolutionary Privacy-First Platform with Integrated Modules"
authors = ["G-ACE.inc <dev@g-ace.inc>"]
readme = "README.md"
packages = [{include = "libral_core"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core FastAPI framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database and storage
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"

# Cryptography and security (LIC, LGL modules)
python-gnupg = "^0.5.2"
cryptography = "^41.0.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# WebAssembly runtime (LAS module)
wasmtime = "^14.0.0"

# Image and file processing (LAS module)
pillow = "^10.1.0"
python-magic = "^0.4.27"

# HTTP client and networking
httpx = "^0.25.2"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"

# Telegram integration (LEB module)
aiogram = "^3.3.0"

# Logging and configuration
structlog = "^23.2.0"
python-dotenv = "^1.0.0"

# Email support (LEB module)
aiosmtplib = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true